<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">taoschool</string>
    <string name="title_activity_main">淘大学</string>
    <string name="action_settings">Settings</string>

    <!-- 主界面 -->
    <string name="province">所在省市</string>
    <string name="yxlx">院校类型</string>
    <string name="bxlx">办学类型</string>
    <string name="xlcc">学历层次</string>
    <string name="s_type">学校类型:</string>
    <string name="s_address">学校地址:</string>
    <string name="s_office">招生办:</string>
    <string name="pull_to_refresh_pull_label">下拉刷新...</string>
    <string name="pull_to_refresh_release_label">释放刷新...</string>
    <string name="pull_to_refresh_refreshing_label">正在加载...</string>
    <string name="pull_to_refresh_tap_label">上拉刷新...</string>
    <string name="more">加载更多</string>
    <string name="no_new_content">暂时没有更多内容了，请看看其他分类吧</string>
    <string name="net_cannot_used">当前网络不可用</string>
    <string name="check_your_netset">请检查你的网络设置</string>
    <string name="err_no_result">没有符合条件的结果</string>
    <string name="toast_request_failed">获取失败，稍后重试</string>
    <string name="dialog_btn_ok">确定</string>
    <string name="dialog_btn_cancel">取消</string>
    <string name="dialog_pb_msg">请求中</string>
    <string name="title_activity_school_detail">SchoolDetailActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="unknow">未知</string>
    <string name="no_info">暂无信息</string>
    <string name="call_hint">拨打电话</string>
    <string name="keyword_hint">请输入大学名称等关键词</string>
    <string name="score">分数范围</string>
    <string name="branch">专业类型</string>
    <string name="search">搜索</string>
    <!-- 详情信息页 -->
    <string name="school_introduce">学校简介</string>
    <string name="enroll_plan">招生计划</string>
    <string name="enroll_record">历年录取</string>
    <string name="major_enroll">专业录取</string>
    <string name="enroll_part">录取批次:</string>
    <string name="max_score">最高分:</string>
    <string name="min_score">最低分:</string>
    <string name="avg_score">平均分:</string>
    <string name="major_name">专业名称:</string>
    <string name="plan_type">计划类型:</string>
    <string name="system">学制:</string>
    
    <!-- 淘专业 -->
    <string name="score_hint">请输入您要查的分数范围:</string>
    <string name="score_commit">确定并查询</string>

    <!-- 我的淘 -->
    <string name="hello_title">hello,欢迎使用淘大学</string>
    <string name="set_param">请设置你的淘参数，以便更加快捷地查找大学和专业信息</string>
    <string name="all_hint">全部</string>
    <string name="student_info">考生信息:</string>
    <string name="student_score">估计分数:</string>
    <string name="score_deviation">分数误差:</string>
    <string name="student_location">考生所在地:</string>
    <string name="location_hint">请选择考试所在地...</string>
    <string name="student_branch">科类:</string>
    <string name="register_info">报考信息:</string>
    <string name="register_location">报考地区:</string>
    <string name="register_hint">请选择报考地区...</string>
    <string name="register_preference">报考首选项:</string>
    <string name="register_school_type">高校类型</string>
    <string name="school_pre">优先考虑高校</string>
    <string name="major_pre">优先考虑专业</string>
    <string name="register_school_system">办学类型</string>
    <string name="register_major_type">专业类型</string>
    <string name="register_school_pclx">批次类型</string>
    <string name="liberal_art">文科</string>
    <string name="science">理科</string>
    <string name="confirm">确认并查询</string>
    <string name="five_score">±5</string>
    <string name="ten_score">±10</string>
    <string name="fifteen_score">±15</string>
    <string name="no_score_hint">请输入预估分数</string>
    <string name="no_province_hint">请选择考生所在地</string>

</resources>
