<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
   >
    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">
        <LinearLayout
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:padding="@dimen/detail_activity_padding"
             android:layout_alignParentLeft="true"
             android:orientation="horizontal"
             android:gravity="center_vertical">
             <ImageView 
                 android:id="@+id/iv_back"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/icon_back"
                 android:layout_marginRight="@dimen/detail_activity_padding"/>
              <TextView 
                 android:id="@+id/tv_schoolname"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="18sp"
                 android:textColor="@color/detail_activity_gray2"
                 android:layout_marginRight="@dimen/detail_activity_padding"/>
              <ImageView 
                 android:id="@+id/iv_iscomfirm"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/icon_confirm"
                 android:layout_marginRight="@dimen/detail_activity_padding"
                  />
              <ImageView 
                 android:id="@+id/iv_is985"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/icon_985"
                 android:layout_marginRight="@dimen/detail_activity_padding"
                  />
              <ImageView
                 android:id="@+id/iv_is211" 
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/icon_211"
                 android:layout_marginRight="@dimen/detail_activity_padding"
                  />
         </LinearLayout>
      
        <LinearLayout
           android:layout_height="wrap_content"
           android:layout_width="wrap_content"
           android:layout_alignParentRight="true"
           android:padding="@dimen/detail_activity_padding"
           android:orientation="horizontal"
           android:gravity="center_vertical">
              <ImageView 
                 android:id="@+id/iv_share"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/ico_share"
                 android:layout_marginRight="@dimen/detail_activity_padding"
                  />
              <ImageView 
                 android:id="@+id/iv_love"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/ico_love"
                 android:layout_marginRight="@dimen/detail_activity_padding"
                  />
        </LinearLayout>
    </RelativeLayout>
   <RelativeLayout 
       android:layout_width="match_parent"
       android:layout_height="100dp">
       <android.support.v4.view.ViewPager
	        android:id="@+id/vp_big_img"       
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:flipInterval="30"
	        android:persistentDrawingCache="animation" />
       <LinearLayout 
	        android:id="@+id/ll_bottom_circle"
	        android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:padding="5dp"
			android:orientation="horizontal"
			android:gravity="center"
			android:layout_alignParentBottom="true"	
	        ></LinearLayout>
   </RelativeLayout>
   
   <LinearLayout 
      	android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:background="@color/detail_activity_green_less"
	    android:padding="@dimen/detail_activity_padding"
       >
       <TextView
         	android:id="@+id/tv_sub_title1" 
         	android:layout_width="wrap_content"
  	    	android:layout_height="wrap_content"
  	    	android:layout_weight="1.0"
  	    	android:gravity="center"
  	    	android:textColor="@color/detail_activity_green_more"
  	    	android:text="@string/school_introduce"	    	
         />
       <ImageView 
          android:layout_width="0.5dp"
	    	  android:layout_height="fill_parent"
	    	  android:background="#000000"
           />
       <TextView 
          	android:id="@+id/tv_sub_title2"
          	android:layout_width="wrap_content"
	     	android:layout_height="wrap_content"
	     	android:layout_weight="1.0"
	     	android:gravity="center"
	       	android:text="@string/enroll_plan"
	       	android:textColor="@color/detail_activity_green_more"
           />
       <ImageView 
           	android:layout_width="0.5dp"
	    	android:layout_height="fill_parent"
	    	android:background="#000000"
           />
       <TextView
           	android:id="@+id/tv_sub_title3" 
           	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_weight="1.0"
	    	android:gravity="center"
        	android:textColor="@color/detail_activity_green_more"
	    	android:text="@string/enroll_record"
           />
       <ImageView 
           	android:layout_width="0.5dp"
	    	android:layout_height="fill_parent"
	    	android:background="#000000"
           />
       <TextView 
           	android:id="@+id/tv_sub_title4"
           	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_weight="1.0"
	    	android:gravity="center"
        	android:textColor="@color/detail_activity_green_more"
	    	android:text="@string/major_enroll"
           />       
   </LinearLayout>
   <RelativeLayout 
       android:layout_width="fill_parent"
       android:layout_height="fill_parent"
       android:paddingLeft="@dimen/detail_activity_padding"
       android:paddingRight="@dimen/detail_activity_padding">
       <TextView
           android:id="@+id/tv_more"
           android:layout_width="fill_parent"
           android:layout_height="50dp"
           android:layout_alignParentBottom="true"
           android:gravity="center"
           android:text="@string/more"
           android:textColor="@color/gray_more"
           android:textSize="@dimen/font_size_30px"
           android:visibility="gone"
           />
       <android.support.v4.view.ViewPager
	        android:id="@+id/vp_content"       
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
			android:padding="@dimen/detail_activity_padding"
			android:layout_above="@id/tv_more"
	        android:flipInterval="30"
	        android:persistentDrawingCache="animation" />
       
   </RelativeLayout>


</LinearLayout>
