<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/gray0">
	<RelativeLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="40dp">
	    <LinearLayout
	        android:id="@+id/sub_title"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:background="@color/gray1"         
	        android:orientation="horizontal"
	        android:gravity="center_vertical">
	        
	        <LinearLayout 
	            android:id="@+id/sub_title_lable1"
	            android:layout_width="fill_parent"
	        	android:layout_height="wrap_content"
	        	android:layout_weight="1"
	        	android:gravity="center_vertical"
	        	android:paddingLeft="5dp"
	        	android:paddingRight="3dp"
	            >
	            <TextView
		            android:id="@+id/tv_sub_title1"
		            android:layout_width="60dp"
		            android:layout_height="wrap_content"
		            android:gravity="center"
		            android:text="@string/province"
		            android:textColor="@color/gray5"
		            android:textSize="@dimen/sub_title" />               
		        
		        <ImageView 
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:src="@drawable/down_arrow"/>
		        	                   
	        </LinearLayout>
	
	        <ImageView 
	            android:layout_width="0.5dp"
	            android:layout_height="fill_parent"
	            android:background="@color/gray_divider"
	            />
	        
	        <LinearLayout 
	            android:id="@+id/sub_title_lable2"
	            android:layout_width="fill_parent"
	        	android:layout_height="wrap_content"
	        	android:layout_weight="1"
	        	android:gravity="center_vertical"
	        	android:paddingLeft="5dp"
	        	android:paddingRight="3dp"
	            >
	             <TextView
		            android:id="@+id/tv_sub_title2"
					android:layout_width="60dp"
		            android:layout_height="wrap_content"
		            android:gravity="center"
		            android:text="@string/yxlx"
		            android:textColor="@color/gray5"
		            android:textSize="@dimen/sub_title" /> 
		            />
		        
		        <ImageView 
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:src="@drawable/down_arrow"
		           />
	            
	        </LinearLayout>
	
	       
	        
	        <ImageView 
	            android:layout_width="0.5dp"
	            android:layout_height="fill_parent"
	            android:background="@color/gray_divider"
	            />
	        
	         <LinearLayout 
	            android:id="@+id/sub_title_lable3"	            
	            android:layout_width="fill_parent"
	        	android:layout_height="wrap_content"
	        	android:layout_weight="1"
	        	android:gravity="center_vertical"
	        	android:paddingLeft="5dp"
	        	android:paddingRight="3dp"
	            >
	             <TextView
		            android:id="@+id/tv_sub_title3"
					android:layout_width="60dp"
		            android:layout_height="wrap_content"
		            android:gravity="center"
		            android:text="@string/bxlx"
		            android:textColor="@color/gray5"
		            android:textSize="@dimen/sub_title" /> 
			        
		        <ImageView 
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:src="@drawable/down_arrow"/>
	            
	        </LinearLayout>
	
	        
	        <ImageView 
	            android:layout_width="0.5dp"
	            android:layout_height="fill_parent"
	            android:background="@color/gray_divider"
	            />
	        
	         <LinearLayout 
	            android:id="@+id/sub_title_lable4"	            
	            android:layout_width="fill_parent"
	        	android:layout_height="wrap_content"
	        	android:layout_weight="1"
	        	android:gravity="center_vertical"
	        	android:paddingLeft="5dp"
	        	android:paddingRight="3dp"
	            >
	            <TextView
		            android:id="@+id/tv_sub_title4"
		            android:layout_width="60dp"
		            android:layout_height="wrap_content"
		            android:gravity="center"
		            android:text="@string/xlcc"
		            android:textColor="@color/gray5"
		            android:textSize="@dimen/sub_title" /> 
		        
		        <ImageView 
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:src="@drawable/down_arrow"/>
	            
	        </LinearLayout>
	  
	    </LinearLayout>
	    <ImageView 
	        android:layout_width="fill_parent"  
		    android:layout_height="0.5dp"
		    android:background="@color/gray5"
		    android:layout_alignParentBottom="true"
        />
	    <LinearLayout 	        
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentBottom="true"
	        android:orientation="horizontal">
	        <LinearLayout 
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:gravity="center">	            
	            <ImageView 
		            android:id="@+id/iv_up_arrow1"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:src="@drawable/icon_up_arrow"
		            android:visibility="gone"
	            />
	        </LinearLayout>
	     	<LinearLayout 
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:gravity="center">	            
	            <ImageView 
		            android:id="@+id/iv_up_arrow2"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:src="@drawable/icon_up_arrow"
		            android:visibility="gone"		            
	            />
	        </LinearLayout>
	        <LinearLayout 
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:gravity="center">	            
	            <ImageView 
		            android:id="@+id/iv_up_arrow3"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:src="@drawable/icon_up_arrow"
		            android:visibility="gone"
	            />
	        </LinearLayout>
	        <LinearLayout 
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:gravity="center">	            
	            <ImageView 
		            android:id="@+id/iv_up_arrow4"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:src="@drawable/icon_up_arrow"
		            android:visibility="gone"
	            />
	        </LinearLayout>	        	        
	    </LinearLayout>
	</RelativeLayout>
    
    <RelativeLayout
    	android:layout_width="fill_parent"  
        android:layout_height="fill_parent">
	    
        <LinearLayout
        	android:layout_width="fill_parent"  
        	android:layout_height="fill_parent"
        	android:orientation="vertical">
        	<LinearLayout 
        	    android:layout_width="280dp"  
		        android:layout_height="40dp"
		        android:layout_marginTop="@dimen/activity_vertical_margin" 
		        android:layout_marginBottom="@dimen/activity_vertical_margin"
		        android:layout_gravity="center_horizontal"
        	    android:orientation="horizontal"
        	    android:background="@drawable/rect_circle_gray"	
        	    >
        	    <RelativeLayout 
			        android:layout_width="230dp"  
			        android:layout_height="fill_parent"			  
			        android:padding="@dimen/sub_title_padding_ud"
			        >
			        <ImageView
			            android:id="@+id/iv1"
			            android:layout_width="20dp"  
			        	android:layout_height="20dp" 
			        	android:layout_alignParentLeft="true"
			        	android:layout_marginRight="@dimen/sub_title_padding_ud"
			            android:layout_centerVertical="true"			     
			        	android:background="@drawable/icon_search"
			            />
			        <EditText 
			            android:id="@+id/et_search"
			            android:layout_width="wrap_content"  
			        	android:layout_height="wrap_content"
			        	android:layout_toRightOf="@id/iv1"
			        	android:hint="@string/keyword_hint"
			        	android:textSize="@dimen/search_hint"
			        	android:gravity="center_vertical"			        	
			        	android:layout_marginRight="@dimen/sub_title_padding_ud"
			        	android:layout_centerVertical="true"
			        	android:background="@color/white"
			            /> 
			         <ImageView 
			             android:id="@+id/iv_cancel_search"
			             android:layout_alignParentRight="true"
			             android:layout_centerVertical="true"
			             android:layout_width="20dp"
			             android:layout_height="20dp"
			             android:background="@drawable/cancle_search"
			             android:visibility="gone"
			        	 />        
		        	   
			    </RelativeLayout>
			    <TextView 
		    	    android:id="@+id/iv_search"
		    	    android:layout_width="50dp"
		    	    android:layout_height="fill_parent"
		    	    android:gravity="center"
		    	    android:text="@string/search"
		    	    android:textSize="@dimen/search_hint"
		    	    android:textColor="@color/white"
		    	    android:background="@drawable/selector_search_btn"/>  
        	</LinearLayout>
	            
		    <ImageView 
		        android:layout_width="fill_parent"  
			    android:layout_height="1.5dp"
			    android:background="@color/gray5"
		        />
		    
		    <cn.taoschool.pulltorefresh.library.PullToRefreshListView  
		        android:id="@+id/refresh_school_list"  
		        android:layout_width="fill_parent"  
		        android:layout_height="fill_parent"
		        android:background="@color/white"  
		        android:cacheColorHint="#00000000"  
		        android:divider="#19000000"  
		        android:dividerHeight="0dp"  
		        android:fadingEdge="none"  
		        android:fastScrollEnabled="false"  
		        android:footerDividersEnabled="false"  
		        android:headerDividersEnabled="false"  
		        android:smoothScrollbar="true" /> 
        </LinearLayout>      
	    	    
        <ListView 
            android:id="@+id/lv_menulist"
            android:layout_height="wrap_content"
	        android:layout_width="fill_parent"	        
		    android:paddingLeft="10dp"
		    android:paddingRight="10dp"
	        android:paddingBottom="10dp"
	        android:background="@color/white"
            android:divider="@null"
            android:visibility="gone">	 	                       
        </ListView>
        <include 
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        layout="@layout/layout_loading"/>
    </RelativeLayout>
    
    
</LinearLayout>
